# mun-sdk-ai

./: .gitignore  .taurignore  INSTALL-MAC.md  TEST_MACRO_RESULTS.md  TEST_TIKTOK_RESULTS.md  TODO.md  index.html  install-mac-auto.sh  install-mac.sh  package-lock.json  package.json  requirements.txt  test_droidrun_direct.py  test_xpath_like.py  update.md  vite.config.js  wdio.conf.js
src-tauri/: .tauri-private-key  .tauri-private-key.pub  Cargo.toml  droidrun_executor.py  run_droidrun.py  scripter_wrapper.py  tauri.conf.json  workflow_calibrator.py  workflow_recorder.py
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adb.rs  config.rs  emulator.rs  lib.rs  license.rs  macro_cmd.rs  main.rs  portal_client.rs  task.rs  utils.rs  workflow.rs  workflow_v2.rs
src-tauri/trajectories/20260109_172619_300ffda3/: macro.json  trajectory.json
src-tauri/trajectories/20260109_174614_33e4608f/: macro.json  trajectory.json
src-tauri/trajectories/20260109_175932_f7d5f366/: macro.json  trajectory.json
src-tauri/trajectories/20260109_180806_5ab54c49/: macro.json  trajectory.json
src-tauri/trajectories/20260109_181205_85417326/: trajectory.json
src-tauri/trajectories/20260109_181531_24cdeadf/: trajectory.json
src-tauri/trajectories/20260109_181807_f3ebb85b/: trajectory.json
src-tauri/trajectories/20260109_181851_cd788a26/: trajectory.json
src-tauri/trajectories/20260109_181943_6588f240/: trajectory.json
src-tauri/trajectories/20260109_182045_c110a70d/: macro.json  trajectory.json
src-tauri/workflows/: kuaishou-auto-watch.json
(+237 files in other folders)
